[workspace]
members = [
    "block-decoder",
    "ingestor-kafka",
    "hbase-reader",
    "hbase-writer",
    "storage-reader",
    "storage-writer",
    "storage-utils",
    "storage-proto-tx",
    "bigtable-reader",
    "bigtable-writer",
    "bigtable-shared",
]

resolver = "2"

[workspace.package]
version = "3.1.8"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
repository = "https://github.com/dexterlaboss/ingestor-sdk"
homepage = "https://dexterlab.com/"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.68"
backoff = "0.4.0"
base64 = "0.21.2"
bincode = "1.3.3"
borsh = "1.5.3"
borsh-derive = "1.5.3"
bs58 = "0.4.0"
bytes = "1.2"
bytemuck = "1.8.0"
bzip2 = "0.4.4"
chrono = "0.4.22"
clap = "2.33.1"
console = "0.15.7"
crossbeam-channel = "0.5.8"
dotenv = "0.15.0"
enum-iterator = "1.4.1"
envy = "0.4.2"
env_logger = "0.9.3"
fd-lock = "3.0.12"
flate2 = "1.0.26"
futures = "0.3.28"
generic-array = "0.14.4"
goauth = "0.13.1"
hbase-thrift = "=1.1.0"
http = "0.2.9"
hyper = "0.14.26"
hyper-proxy = "0.9.1"
indicatif = "0.17.4"
Inflector = "0.11.4"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0"
prometheus = "0.13.4"
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.17"
matches = "0.1.10"
md5 = "0.7"
memcache = "0.17.2"
num-derive = "0.3"
num-traits = "0.2"
num_cpus = "1.15.0"
num_enum = "0.6.1"
openssl = "0.10"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
rayon = "1.7.0"
rustc_version = "0.4"
serde = "1.0.163"
serde_bytes = "0.11.9"
serde_derive = "1.0.103"
serde_json = "1.0.96"
serde_with = { version = "2.3.3", default-features = false }
signal-hook = "0.3.15"
smpl_jwt = "0.7.1"
thrift = "0.15.0"
thrift-pool = "=1.4.0"
spl-memo = "=3.0.1"
symlink = "0.1.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
thiserror = "1.0.40"
tokio = "1.14.1"
tokio-serde = "0.8"
tokio-util = "0.6"
tonic = "0.8.3"
tonic-build = "0.8.4"
zstd = "0.11.2"
url = "2.3.1"
nix = "0.26.2"
caps = "0.5.5"

solana-clap-utils = "=3.1.8"
solana-account-decoder = "=3.1.8"
solana-clap-v3-utils = "=3.1.8"
solana-logger = "=3.0.0"
solana-rayon-threadlimit = "=3.1.8"
solana-rpc-client-api = "=3.1.8"
solana-send-transaction-service = "=3.1.8"
solana-transaction-status = "=3.1.8"
solana-program = { version = "3.0.0", default-features = false }
solana-version = "=3.1.8"
solana-storage-proto = "=3.1.8"

solana-pubkey = { version = "3.0.0", default-features = false }
solana-short-vec = "3.0.0"
solana-clock = "=3.0.0"
solana-hash = "=3.1.0"
#solana-sha256-hasher = "3.1.0"
solana-message = "=3.0.1"
solana-signature = { version = "3.1.0", default-features = false }
solana-transaction = "=3.0.2"
solana-transaction-error = "=3.0.0"
solana-transaction-context = { version = "=3.1.8", features = ["bincode"] }
solana-sysvar = "=3.0.0"
solana-serde = "=3.0.0"
solana-instruction = "=3.0.0"
agave-reserved-account-keys = "=3.1.8"
solana-time-utils = "=3.0.0"
solana-keypair = "=3.0.1"
solana-system-transaction = "=3.0.0"

solana-account-decoder-client-types = "=3.1.8"
solana-transaction-status-client-types = "=3.1.8"

solana-storage-reader = { path = "storage-reader", version = "=3.1.8" }
solana-storage-writer = { path = "storage-writer", version = "=3.1.8" }
solana-storage-utils = { path = "storage-utils", version = "=3.1.8" }
solana-hbase-reader = { path = "hbase-reader", version = "=3.1.8" }
solana-hbase-writer = { path = "hbase-writer", version = "=3.1.8" }
solana-block-decoder = { path = "block-decoder", version = "=3.1.8" }
dexter-storage-proto-tx = { path = "storage-proto-tx", version = "=3.1.8" }
solana-bigtable-shared = { path = "bigtable-shared", version = "=3.1.8" }
solana-bigtable-reader = { path = "bigtable-reader", version = "=3.1.8" }
solana-bigtable-writer = { path = "bigtable-writer", version = "=3.1.8" }

[workspace.dependency-overrides]
solana-sha256-hasher = "3.1.0"