[package]
name = "solana-block-decoder"
version = { workspace = true }
description = "Solana Block Decoder"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = "2021"

[dependencies]
Inflector = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
enum-iterator = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
borsh-derive = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
lazy_static = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true, default-features = true, features = ["i128", "std"] }
generic-array = { workspace = true, default-features = false, features = ["serde", "more_lengths"], optional = false }
bytemuck = { workspace = true, features = ["derive"] }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program = {workspace = true}
solana-sdk = { workspace = true }
solana-storage-writer = { workspace = true }
solana-storage-utils = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
spl-memo = { workspace = true, features = ["no-entrypoint"] }

## openssl is a dependency of the goauth and smpl_jwt crates, but explicitly
## declare it here as well to activate the "vendored" feature that builds OpenSSL
## statically...
#[target."cfg(not(windows))".dependencies]
#openssl = { version = "0.10", features = ["vendored"] }
## ...except on Windows to avoid having to deal with getting CI past a build-time
## Perl dependency
#[target."cfg(windows)".dependencies]
#openssl = { version = "0.10", features = [] }


[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util"]
version = "1.11.0"

[lib]
crate-type = ["lib"]
#path = "src/encoder"
name = "solana_block_decoder"

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

#[[bin]]
#name = "sol-block-encoder"
#path = "src/bin/sol-block-encoder.rs"
#
#[[bin]]
#name = "sol-tx-encoder"
#path = "src/bin/sol-tx-encoder.rs"
