[package]
name = "solana-hbase-writer"
version = { workspace = true }
description = "Solana HBase storage writer library"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
hbase-thrift = { workspace = true }
thrift = { workspace = true }

backoff = { workspace = true, features = ["tokio"] }
bincode = { workspace = true }
bytes = { workspace = true }
enum-iterator = { workspace = true }
bzip2 = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
memcache = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-writer = { workspace = true }
solana-storage-proto = { workspace = true }
dexter-storage-proto-tx = { workspace = true }
solana-storage-utils = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
md5 = { workspace = true }

#moka = { version = "0.12.7", features = ["sync"] }


# openssl is a dependency of the goauth and smpl_jwt crates, but explicitly
# declare it here as well to activate the "vendored" feature that builds OpenSSL
# statically...
[target."cfg(not(windows))".dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# ...except on Windows to avoid having to deal with getting CI past a build-time
# Perl dependency
[target."cfg(windows)".dependencies]
openssl = { version = "0.10", features = [] }

[lib]
crate-type = ["lib"]
name = "solana_hbase_writer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
