[package]
name = "ingestor-kafka"
version = "2.0.0"
description = "Solana Kafka block ingestor service"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "Apache-2.0"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = "2021"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
envy = "0.4.2"
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
#serde_json = "1.0.83"
serde_json = { version = "1.0.83", features = ["float_roundtrip"] }
#borsh = "0.9.1"
borsh = "1.5.3"
#borsh-derive = "0.9.1"
borsh-derive = "1.5.3"
bs58 = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
futures = { workspace = true }
#hdrs = "0.1.4"
thiserror = { workspace = true }
dotenv = "0.15.0"
bincode = { workspace = true }
hbase-thrift = "=1.1.0"
thrift = "0.15.0"
thrift-pool = "=1.4.0"
#hdfs = "0.0.4"
chrono = { version = "0.4.22", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
#solana-block-decoder = { path = "../encoder", version = "=1.3.1" }
solana-block-decoder = { workspace = true }
solana-hbase-writer = { workspace = true }
solana-storage-writer = { workspace = true }
solana-transaction-status = { workspace = true }
solana-clap-utils = { workspace = true }
#solana-clap-utils = "=2.0.19"
solana-sdk = { workspace = true }
#solana-sdk = "=2.0.19"
solana-storage-proto = { workspace = true }
#solana-storage-proto = "=2.0.19"
solana-version = { workspace = true }
#solana-version = "=2.0.19"
md5 = "0.7"
memcache = "0.17.2"

# Unused dependencies:
#hex = "0.4.3"
#pretty-hex = "0.3.0"
#prost-types = "0.11.1"
#rust_decimal = "1.0"

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util"]
version = "1.11.0"

[dependencies.rdkafka]
features = ["cmake-build", "gssapi", "ssl", "sasl", "tokio"]
version = "0.29.0"
# git = "https://github.com/fede1024/rust-rdkafka"
# rev = "65520c820565f9882475cc29cd6d149940515324"

[lib]
crate-type = ["lib"]
name = "ingestor_kafka"

[build-dependencies]
rustc_version = "0.4"

[[bin]]
name = "ingestor-kafka-service"
path = "src/bin/ingestor-kafka-service.rs"

[[bin]]
name = "block-uploader"
path = "src/bin/sol-block-uploader.rs"