[package]
name = "ingestor-kafka"
version = "2.0.3"
description = "Solana Kafka block ingestor service"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = "2021"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
envy = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["float_roundtrip"] }
borsh = { workspace = true }
borsh-derive = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true }
bincode = { workspace = true }
hbase-thrift = { workspace = true }
thrift = { workspace = true }
thrift-pool = { workspace = true }
md5 = { workspace = true }
memcache = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
backoff = { workspace = true, features = ["tokio"] }

solana-block-decoder = { workspace = true }
solana-hbase-writer = { workspace = true }
solana-storage-writer = { workspace = true }
solana-transaction-status = { workspace = true }
solana-clap-utils = { workspace = true }
#solana-sdk = { workspace = true }
solana-storage-proto = { workspace = true }
solana-version = { workspace = true }

solana-pubkey = { workspace = true }
solana-transaction-status-client-types = { workspace = true }

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util"]
version = "1.11.0"

[dependencies.rdkafka]
features = ["cmake-build", "gssapi", "ssl", "sasl", "tokio"]
version = "0.29.0"
# git = "https://github.com/fede1024/rust-rdkafka"
# rev = "65520c820565f9882475cc29cd6d149940515324"

[lib]
crate-type = ["lib"]
name = "ingestor_kafka"

[build-dependencies]
rustc_version = "0.4"

[[bin]]
name = "ingestor-kafka-service"
path = "src/bin/ingestor-kafka-service.rs"

[[bin]]
name = "block-uploader"
path = "src/bin/sol-block-uploader.rs"