[package]
name = "solana-storage-reader"
version = { workspace = true }
description = "Solana abstract storage reader library"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

solana-clock = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-serde = { workspace = true }
solana-transaction-status-client-types = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_storage_reader"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]