[package]
name = "solana-storage-writer"
version = { workspace = true }
description = "Solana abstract storage writer library"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/dexterlaboss/solana-lite-rpc-storage-ingestor"
homepage = "https://dexterlab.com"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
prost = { workspace = true }

solana-transaction-status = { workspace = true }

solana-clock = { workspace = true }
solana-pubkey = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_storage_writer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]